# sealsay

./: .SRCINFO  .gitattributes  .pre-commit-config.yaml  PKGBUILD  README.md  pyproject.toml  pyrightconfig.json  sealsay  sealsay.bat
.github/workflows/: lint.yml  publish-aur.yml
Formula/: sealsay.rb
aur/: PKGBUILD
man/: sealsay  sealsay.1
scripts/: autoupdate_seals_readme.py
seals/: README.MD  basic.txt  basicseal.txt  old.txt  oldseal.txt  sealion.txt  tiredseal.txt  triple.txt
src/sealsay/: __init__.py  __main__.py  cli.py
src/sealsay/seals/: README.MD  basic.txt  old.txt  triple.txt
